change profile images

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!-- Open Graph data -->
     <meta property="og:title" content="Hiren Bhingaradiya Portfolio (Data scientist | Python Developer)" />
-    <meta property="og:image" content="images/ikram-ali.jpeg" />
+    <meta property="og:image" content="images/profile-image.png" />
     <meta property="og:site_name" content="Hiren Bhingaradiya Portfolio" />
     <meta property="og:description"
         content="The portfolio of the Data scientist | Python Developer Hiren Bhingaradiya." />
@@ -66,14 +66,14 @@
     <meta name="twitter:title" content="Hiren Bhingaradiya Portfolio (Data scientist | Python Developer)">
     <meta name="twitter:description"
         content="The portfolio of the Data scientist | Python Developer Hiren Bhingaradiya.">
-    <meta name="twitter:image" content="images/ikram-ali.jpeg"> <!-- image must be at least 120x120px -->
+    <meta name="twitter:image" content="images/profile-image.png"> <!-- image must be at least 120x120px -->
     <meta name="twitter:site" content="@akkefa">
     <meta name="twitter:creator" content="@akkefa">
 
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Hiren Bhingaradiya Portfolio (Data scientist | Python Developer)" />
     <meta itemprop="description" content="The portfolio of the Data scientist | Python Developer Hiren Bhingaradiya." />
-    <meta itemprop="image" content="images/ikram-ali.jpeg" />
+    <meta itemprop="image" content="images/profile-image.png" />
 
 
     <link
@@ -908,7 +908,8 @@
                         <li><i class="fa fa-check" aria-hidden="true"></i> NLP Chatbot Development</li>
                     </ul>
                     <p>Drop me a line at <a href="mailto:mrikram1989@gmail.com">mrikram1989@gmail.com</a> or call me at
-                        <a href="tel:923320453648">92 3320 453648</a></p>
+                        <a href="tel:923320453648">92 3320 453648</a>
+                    </p>
                     <ul class="social list-inline">
                         <li class="list-inline-item"><a href="https://www.linkedin.com/in/akkefa/"><i
                                     class="fa fa-linkedin" aria-hidden="true"></i></a>
