--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Hiren Bhingaradiya" />
 
     <link
-        href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic'
+        href='https://fonts.googleapis.com/css?family=Bai+Jamjuree:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic'
         rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
